--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,6 +40,7 @@ nav ul li a{
     display: block;
     color: black;
     text-align: center;
+    font-size: 20px;
     padding: 10px 16px;
     text-decoration: none;
     transition: background-color .3s ease;
@@ -111,13 +112,29 @@ nav li a:hover {
 /*Sets the display as a flex box*/
 .about {
     display: flex;
-    margin: 60px 30px;
+    align-items: center;
+    justify-content: center;
+    margin: 60px 60px;
+}
+
+.primary-image-subtext {
+    overflow: auto;
 }
 
 /*This will be reused in the paragraph section*/
 h2 {
-    font-size: 40px;
+    font-size: 46px;
     margin-bottom: 20px;
+}
+
+.bio {
+    max-width: auto;
+    height: auto;
+    overflow: auto;
+}
+
+p {
+    font-size: 20px;
 }
 
 /*THIS IS FOR THE PROFILE PICTURE*/
@@ -204,6 +221,7 @@ h2 {
     height: auto;
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-evenly;
 }
 
 /* Changes text color of image text to black */
@@ -259,7 +277,7 @@ h2 {
     height: 100%;
     background-color: rgba(255, 255, 255, 0); 
     color: var(--dark-accent-); 
-    margin: 10px;
+    margin: auto;
     font-size: 60px;
     padding: 0px;
     text-align: center;
@@ -336,7 +354,7 @@ h2 {
     height: 100%;
     background-color: rgba(255, 255, 255, 0); 
     color: var(--dark-accent-); 
-    margin: 10px;
+    margin: auto;
     font-size: 40px;
     padding: 0px;
     text-align: center;
@@ -404,7 +422,7 @@ h2 {
     height: 100%;
     background-color: rgba(255, 255, 255, 0); 
     color: var(--dark-accent-); 
-    margin: 10px;
+    margin: auto;
     font-size: 40px;
     padding: 0px;
     text-align: center;
@@ -471,7 +489,7 @@ h2 {
     height: 100%;
     background-color: rgba(255, 255, 255, 0); 
     color: var(--dark-accent-); 
-    margin: 10px;
+    margin: auto;
     font-size: 40px;
     padding: 0px;
     text-align: center;
@@ -539,7 +557,7 @@ h2 {
     height: 100%;
     background-color: rgba(255, 255, 255, 0); 
     color: var(--dark-accent-); 
-    margin: 10px;
+    margin: auto;
     font-size: 40px;
     padding: 0px;
     text-align: center;
@@ -616,6 +634,7 @@ h2 {
     color: black;
     text-align: center;
     padding: 10px 16px;
+    font-size: 20px;
     text-decoration: none;
     transition: background-color .3s ease;
 }
@@ -623,4 +642,210 @@ h2 {
 ul li a:hover {
     background-color: var(--dark-accent);
     color:white;
+}
+
+/*Media Queries below*/
+
+@media screen and (min-width:1441px ) {
+    .about {
+        max-width: 1440px;
+        margin: 60px auto;  
+    }
+
+    .portfolio {
+        max-width: 1440px;
+        margin: 60px auto;  
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    .bio {
+        max-width: 100%;
+        height: 200px;
+        overflow: auto;
+        /* margin: 10px 10px; */
+        padding: 20px;
+        background-color: rgba(133, 88, 111, .5);
+        border:1px solid #85586f;
+    }
+
+    .about {
+        max-width: 100%;
+    }
+
+    .portfolio {
+        max-width: auto;
+        margin: 60px auto;  
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .portfolio-right {
+        flex-direction: column;
+        align-items: center;
+    }
+
+}
+
+@media screen and (max-width: 804px) {
+    *, img, .about, .portfolio, .project-right {
+        min-width: auto;
+        min-height: auto;
+    }
+
+    .primary-image-subtext {
+        width: auto;
+        height: 50%;
+        overflow: auto;
+        border: 1px solid black;
+    }
+
+    .primary-image-container {
+        margin: 15px;
+    }
+
+    .portfolio {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .footer-contact {
+        display: flex;
+        flex-direction: column;
+    }
+
+    /*.contact ul{
+        display: flex;
+        color: black;
+        text-align: center;
+        font-size: 20px;
+        text-decoration: none;
+        transition: background-color .3s ease;
+        margin: 0px;
+        padding: 0px;
+    }*/
+
+    ul li a:hover {
+        max-width: 100%;
+        background-color: var(--dark-accent);
+        color:white;
+    }
+}
+
+@media screen and (max-width: 688px) {
+    
+    *, img, .about, .portfolio, .project-right {
+        min-width: auto;
+        min-height: auto;
+    }
+
+    .portfolio-right{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+    }
+    
+    .primary-image-container {
+        width: 300px;
+        height: 200px;
+        position: relative;
+        overflow: hidden;
+        border-radius: 25px;
+        box-shadow: 0px 0px 0px 5px var(--dark-accent);
+    }
+    
+    .primary-project {
+        width: 300px;
+        height: 200px;
+        object-fit: cover;
+    }
+}
+
+@media screen and (max-width: 375px) {
+    
+    .portolio-right {
+        width: auto;
+    }
+
+    .nav-bar {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .nav-link {
+        flex-basis: 25%
+    }
+
+    .profile-picture {
+        display: none;
+    }
+
+    .about {
+        display: flex;
+        margin-left: 0 !important;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .about-right {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+    }
+
+    .about-me {
+        justify-content: center;
+        align-items: center;
+    }
+
+    .bio {
+        margin: 0;
+        padding: 0;
+        width: 300px;
+        height: 200px;
+        justify-content: center;
+        align-items: center;
+        /* align-items: center !important; */
+    }
+    
+    /* *, img, .about, .portfolio, .project-right {
+        min-width: 10%;
+        min-height: 10%;
+    } */
+
+    /* .primary-image-subtext {
+        width: auto;
+        height: 10%;
+        overflow: auto;
+        border: 1px solid black;
+    } */
+
+    /* .portfolio {
+        flex-direction: column;
+        align-items: center;
+    } */
+
+    /* .footer-contact {
+        display: flex;
+        flex-direction: column;
+    } */
+
+    /*.contact ul{
+        display: flex;
+        color: black;
+        text-align: center;
+        font-size: 20px;
+        text-decoration: none;
+        transition: background-color .3s ease;
+        margin: 0px;
+        padding: 0px;
+    }*/
+
+    /* ul li a:hover {
+        max-width: 100%;
+        background-color: var(--dark-accent);
+        color:white;
+    } */
 }
