--- a/assets/css/placeholder.css
+++ b/assets/css/placeholder.css
@@ -38,14 +38,13 @@ nav ul li a{
     color: black;
     text-align: center;
     font-size: 20px;
-    padding: 10px 16px;
+    padding: 0px 20px;
     text-decoration: none;
     transition: background-color .3s ease;
 }
 
 nav li a:hover {
-    background-color: var(--dark-accent);
-    color:white;
+    text-decoration: underline;
 }
 
 
@@ -59,7 +58,7 @@ article {
 .header-design {
     position: relative;
     width: 100%;
-    height: 125px;
+    height: 120px;
 }
 
 /*This keeps the background dimensions consistent*/
@@ -70,7 +69,7 @@ article {
 /*Initially sets the height of the overall header design*/
 .full-width-rectangle {
     width: 100%;
-    height: 125px;
+    height: 120px;
     background-color: var(--dark-accent);
 }
 
@@ -78,16 +77,36 @@ article {
 
 .accent-one-header {
     width: 100%;
-    height: 100%;
+    height: 97%;
     background-color: var(--accent-one);
     position: absolute; 
-    clip-path: polygon(0% 60%, 100% 20%, 100% 100%, 0% 100%);
+    clip-path: polygon(0% 50%, 50% 50%, 90% 90%, 0% 90%);
+    z-index: 1;
 }
 
 .accent-two-header {
     width: 100%;
-    height: 100%;
+    height: 97%;
     background-color: var(--accent-two);
     position: absolute; 
-    clip-path: polygon(30% 48%, 100% 20%, 100% 80%, 30% 48%);
+    clip-path: polygon(0% 50%, 90% 50%, 20% 90%, 0% 90%);
+    z-index: 2;
+}
+
+.accent-three-header {
+    width: 100%;
+    height: 97%;
+    background-color: var(--back-color);
+    position: absolute; 
+    clip-path: polygon(0% 50%, 100% 50%, 100% 90%, 0% 90%);
+}
+
+.info {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    font-size: 98px;
+    justify-content: center;
+    align-content: center;
+    margin-top: 120px;
 }
