--- a/assets/css/placeholder.css
+++ b/assets/css/placeholder.css
@@ -74,7 +74,6 @@ article {
 }
 
 /*Used clip-path to access the specific points*/
-
 .accent-one-header {
     width: 100%;
     height: 97%;
@@ -110,3 +109,25 @@ article {
     align-content: center;
     margin-top: 120px;
 }
+
+/*Media Queries below*/
+
+/* @media screen and (min-width:1441px ) {
+    
+}
+
+@media screen and (max-width: 1024px) {
+
+}
+
+@media screen and (max-width: 804px) {
+   
+}
+
+@media screen and (max-width: 688px) {
+   
+} 
+
+@media screen and (max-width: 375px) {
+    
+} */
