--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,7 +43,8 @@ nav ul {
     justify-content: flex-end;
     list-style-type: none;
     margin: 0;
-    padding: 01;
+    /*IF SOMETHING HAPPENS AND YOU HAVE TO DEBUG SOMETHING RANDOM. PADDING WAS 01*/
+    padding: 0;
     overflow: hidden;
 }
 
@@ -135,7 +136,7 @@ nav li a:hover {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 60px 60px;
+    margin: 60px 180px;
 }
 
 .primary-image-subtext {
@@ -160,7 +161,7 @@ p {
 
 /*THIS IS FOR THE PROFILE PICTURE*/
 .profile-picture {
-    max-width: 30%;
+    max-width: 25%;
     height: auto;
     margin: 15px;
     border-radius: 25px;
@@ -256,7 +257,7 @@ p {
     height: 400px;
     position: relative;
     overflow: hidden;
-    margin: 0px 0px 15px 15px;
+    margin: 0px 0px 15px 0px;
     border-radius: 25px;
     box-shadow: 0px 0px 0px 5px var(--dark-accent);
 }
@@ -637,7 +638,7 @@ p {
     justify-content: space-evenly;
     list-style-type: none;
     margin: 0;
-    padding: 10px;
+    /* padding: 10px; */
     overflow: hidden;
 }
 
@@ -645,8 +646,8 @@ p {
     display: inline;
     color: black;
     text-align: center;
-    margin: 20px;
-    padding: 10px 16px;
+    /* margin: 20px; */
+    /* padding: 10px 16px; */
     text-decoration: none;
     font-size: 20px;
 }
@@ -668,7 +669,7 @@ ul li a:hover {
 
 /*Media Queries below*/
 
-@media screen and (min-width:1441px ) {
+/* @media screen and (min-width:1441px ) {
     .about {
         max-width: 1440px;
         margin: 60px auto;  
@@ -678,7 +679,7 @@ ul li a:hover {
         max-width: 1440px;
         margin: 60px auto;  
     }
-}
+} */
 
 @media screen and (max-width: 1024px) {
     .bio {
