--- a/assets/css/project.css
+++ b/assets/css/project.css
@@ -48,6 +48,55 @@ nav li a:hover {
     text-decoration: underline;
 }
 
+/* The dropdown container */
+.dropdown {
+    float: left;
+    overflow: hidden;
+}
+  
+/* Dropdown button */
+.dropdown .nav-projects {
+    font-size: 20px;
+    border: none;
+    outline: none;
+    color: black;
+    padding: 0px 20px;
+    background-color: inherit;
+    font-family: inherit; 
+    margin: 0; 
+    cursor: pointer;
+}
+
+.navbar a:hover, .dropdown:hover .nav-projects {
+    text-decoration: underline;
+}
+  
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    /* min-width: 160px; */
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+  
+.dropdown-content a {
+    float: none;
+    color: black;
+    font-size: 20px;
+    padding: 20px 20px; 
+    text-decoration: none;
+    display: block;
+    text-align: left;
+} 
+  
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+  
+.dropdown:hover .dropdown-content {
+    display: block;
+}
 
 /*THIS IS THE CODE FOR THE HEADER DESIGN*/
 article {
