--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -692,8 +692,9 @@ ul li a:hover {
         border:1px solid #85586f;
     }
 
-    .about {
-        max-width: 100%;
+    .profile-picture {
+        width: 250px;
+        height: auto;
     }
 
     .portfolio {
@@ -711,16 +712,17 @@ ul li a:hover {
 }
 
 @media screen and (max-width: 804px) {
-    *, img, .about, .portfolio, .project-right {
-        min-width: auto;
-        min-height: auto;
-    }
 
     .primary-image-subtext {
         width: auto;
         height: 50%;
         overflow: auto;
         border: 1px solid black;
+    }
+
+    .profile-picture {
+        width: 250px;
+        height: auto;
     }
 
     .primary-image-container {
@@ -737,16 +739,6 @@ ul li a:hover {
         flex-direction: column;
     }
 
-    /*.contact ul{
-        display: flex;
-        color: black;
-        text-align: center;
-        font-size: 20px;
-        text-decoration: none;
-        transition: background-color .3s ease;
-        margin: 0px;
-        padding: 0px;
-    }*/
 
     ul li a:hover {
         max-width: 100%;
@@ -756,12 +748,11 @@ ul li a:hover {
 }
 
 @media screen and (max-width: 688px) {
-    
-    *, img, .about, .portfolio, .project-right {
-        min-width: auto;
-        min-height: auto;
-    }
 
+    .img {
+        width: 20%;
+        height: auto;
+    }
     .portfolio-right{
         flex-direction: column;
         justify-content: center;
@@ -786,12 +777,6 @@ ul li a:hover {
 }
 
 @media screen and (max-width: 375px) {
-    
-    *, img, .about, .portfolio, .project-right {
-        min-width: auto;
-        min-height: auto;
-    }
-
     .portolio-right {
         width: auto;
     }
@@ -809,71 +794,11 @@ ul li a:hover {
         display: none;
     }
 
-    .about {
-        display: flex;
-        margin-left: 0 !important;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .about-right {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-wrap: wrap;
-    }
-
     .about-me {
+        display: flex;
         justify-content: center;
         align-items: center;
-    }
-
-    .bio {
-        margin: 0;
-        padding: 0;
         width: 300px;
-        height: 200px;
-        justify-content: center;
-        align-items: center;
-        /* align-items: center !important; */
     }
-    
-    /* *, img, .about, .portfolio, .project-right {
-        min-width: 10%;
-        min-height: 10%;
-    } */
 
-    /* .primary-image-subtext {
-        width: auto;
-        height: 10%;
-        overflow: auto;
-        border: 1px solid black;
-    } */
-
-    /* .portfolio {
-        flex-direction: column;
-        align-items: center;
-    } */
-
-    /* .footer-contact {
-        display: flex;
-        flex-direction: column;
-    } */
-
-    /*.contact ul{
-        display: flex;
-        color: black;
-        text-align: center;
-        font-size: 20px;
-        text-decoration: none;
-        transition: background-color .3s ease;
-        margin: 0px;
-        padding: 0px;
-    }*/
-
-    /* ul li a:hover {
-        max-width: 100%;
-        background-color: var(--dark-accent);
-        color:white;
-    } */
 }
