--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,6 +36,8 @@ header {
     background-color: var(--back-color);
 }
 
+
+
 /*Navigation Bar*/
 nav ul {
     display: flex;
@@ -46,6 +48,18 @@ nav ul {
     /*IF SOMETHING HAPPENS AND YOU HAVE TO DEBUG SOMETHING RANDOM. PADDING WAS 01*/
     padding: 0;
     overflow: hidden;
+}
+
+nav .nav-name {
+    display: block;
+    color: black;
+    align-self: left;
+    text-align: center;
+    font-size: 20px;
+    padding: 10px 16px;
+    text-decoration: none;
+    transition: background-color .3s ease;
+    margin-right: auto;
 }
 
 nav ul li a{
